# telegram_forward

./: .gitignore  Dockerfile  README.rst  pyproject.toml
app/: config.py  main.py
app/jobs/: filter_fx_nv_job.py  filter_healer.py  forward_bot.py  get_private_group_id_job.py
tests/: test_telegram.py
