[tool.poetry]
name = "telegram"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Telethon = "^1.21.1"
typer = "^0.3.2"
requests = "^2.25.1"
asyncio-throttle = "^1.0.1"
python-dotenv = "^0.17.0"
PyYAML = "^5.4.1"
slack-sdk = "^3.4.2"
Pillow = "^8.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
